--- a/targeting/src/app/matriz/matriz.component.html
+++ b/targeting/src/app/matriz/matriz.component.html
@@ -195,39 +195,121 @@
   <tbody *ngFor="let item of Matriz.Actores; let i = index">
     <ng-container *ngIf = "item.hijos?.length; else padre">
       <tr>
-        <th [attr.rowspan]="maxcolspan(item)">{{item.name}} {{maxcolspan(item)}}</th>
+        <th [attr.rowspan]="maxrowspan(item)">{{item.name}}</th>
         <ng-container *ngIf = "item.hijos[0].hijos?.length; else subhijoCabezera">
-          <th [attr.rowspan]="maxcolspan(item)"> {{item.hijos[0].name}}</th>
+          <th [attr.rowspan]="maxrowspan(item)"> {{item.hijos[0].name}}</th>
           <ng-container *ngIf = "item.hijos[0].hijos[0].hijos?.length; else subsubhijoCabezera">
-            <th [attr.rowspan]="maxcolspan(item)"> {{item.hijos[0].hijos[0].name}}</th>
+            <th [attr.rowspan]="item.hijos[0].hijos[0].hijos?.length"> {{item.hijos[0].hijos[0].name}}</th>
             <th>{{item.hijos[0].hijos[0].hijos[0].name}}</th>
           </ng-container>
         </ng-container>
       </tr>
-      <ng-container *ngFor="let hijo of item.hijos| slice:1">
-        <ng-container *ngIf = "hijo.hijos?.length; else subhijoBody">
-          <tr>
-            <th>{{hijo.name}}</th>
-          </tr>    
+      <ng-container *ngFor="let hijo of item.hijos; let a = index">
+        <ng-container *ngIf = "a != 0">
+          <ng-container *ngIf = "hijo.hijos?.length; else subhijoBody">
+            <tr>
+              <th [attr.rowspan]="maxrowspan(item)-1">{{hijo.name}}</th>
+              <ng-container *ngIf = "hijo.hijos[0].hijos.length; else ultimo">
+                <th [attr.rowspan]="hijo.hijos[0].hijos.length">{{hijo.hijos[0].name}}</th>
+                <th>{{hijo.hijos[0].hijos[0].name}} </th>
+              </ng-container>
+            </tr>
+            <ng-template #ultimo>
+              <th colspan="2">{{hijo.hijos[0].name}}</th>
+            </ng-template>
+          </ng-container>
+        </ng-container>
+        <ng-container *ngFor="let subhijo of hijo.hijos; let b = index">
+            <ng-container *ngIf = "b != 0; else Prueba">
+              <ng-container *ngIf = "subhijo.hijos?.length; else subsubhijoBody">
+                <tr>
+                  <th [attr.rowspan]="subhijo.hijos?.length" >{{subhijo.name}} </th>
+                  <th>{{subhijo.hijos[0].name}}</th>
+                </tr>
+                <ng-container *ngFor = "let subhijo1 of subhijo.hijos; let c = index">
+                  <ng-container *ngIf = "c != 0;">
+                    <tr>
+                      <th>{{subhijo1.name}}</th>
+                    </tr>
+                  </ng-container>
+                </ng-container>
+              </ng-container>
+          </ng-container>
+          <ng-template #subsubhijoBody>
+            <tr>
+              <th colspan="2">{{subhijo.name}}</th>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </ng-template>
+          <ng-template #Prueba>
+            <ng-container *ngIf="subhijo.hijos?.length >1">
+              <ng-container *ngFor = "let subhijo1 of subhijo.hijos; let c = index">
+                <ng-container *ngIf = "c != 0">
+                  <th>{{subhijo1.name}}</th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </ng-container>
+              </ng-container>
+            </ng-container>
+          </ng-template>
         </ng-container>
         <ng-template #subhijoBody>
           <tr>
-            <th colspan="3"> {{hijo.name}} 3</th>
+            <th colspan="3"> {{hijo.name}}</th>
+            <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
           </tr>  
         </ng-template>
       </ng-container>
     </ng-container>
     <ng-template #subhijoCabezera>
-      <th colspan="3"> {{item.hijos[0].name}} 3</th>
+      <th colspan="3"> {{item.hijos[0].name}}</th>
+      <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
     </ng-template>
     <ng-template #subsubhijoCabezera>
       <th colspan="2"> {{item.hijos[0].hijos[0].name}}</th>
+      <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
     </ng-template>
     <ng-template #padre>
       <tr>
         <th colspan="4">
           {{item.name}}
         </th>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
       </tr>
     </ng-template>
   </tbody>
@@ -354,6 +436,28 @@
       <td></td>
       <td></td>
     </tr>
+  </tbody>
+  <tbody>
+    <tr>
+      <th rowspan="5">Actor 5</th>
+    </tr>
+    <tr>
+      <th rowspan="4">Actor 5_2</th>
+      <th rowspan="2">Actor 5_2_1</th>
+      <th>Actor 5_2_1_1</th>
+    </tr>
+    <tr>
+      <th>Actor 5_2_1_2</th>
+    </tr>
+    
+    <tr>
+      <th rowspan="2">Actor 5_2_2</th>
+      <th>Actor 5_2_2_1</th>
+    </tr>
+    <tr>
+      <th>Actor 5_2_2_2</th>
+    </tr>
+   
   </tbody>
 </table>
 </ng-template>
