--- a/targeting/src/app/navbar/navbar.component.html
+++ b/targeting/src/app/navbar/navbar.component.html
@@ -4,7 +4,7 @@
   <div class="spacer"></div>
   <a mat-button routerLink="">Incio</a>
   <a mat-button routerLink="actores">Actores</a>
-  <a mat-button routerLink="theme">Temas</a>
+  <a mat-button routerLink="temas">Temas</a>
   <a mat-button routerLink="matrices">Matrices</a>
   <a mat-button routerLink="about">Info</a>
   <button mat-button (click)="onLogout()" *ngIf="isLoggedIn">Logout</button>
