--- a/targeting/src/app/home/home.component.html
+++ b/targeting/src/app/home/home.component.html
@@ -14,8 +14,8 @@
   <div style="display: flex;
   justify-content: space-around; align-items: center;">
 
-      <button mdbBtn type="button" color="elegant" mdbWavesEffect>Actores</button>
-      <button>Temas</button>
+      <button mdbBtn type="button" color="elegant" (click)="Actores();" mdbWavesEffect>Actores</button>
+      <button mdbBtn type="button" color="elegant" (click)="Temas();" mdbWavesEffect>Temas</button>
       <button mdbBtn type="button" color="elegant" (click)="Matriz();" mdbWavesEffect>Matrices</button>
   </div>
 </body>
