--- a/targeting/src/app/register/register.component.html
+++ b/targeting/src/app/register/register.component.html
@@ -16,8 +16,9 @@
             </mat-error>
           </mat-form-field>
           <button mat-raised-button color="primary" type="submit">Crear Usuario</button>
-          <br>
         </form>
+        <br>
+        <button mat-raised-button color="primary" (click)="atras()">Atras</button>
       </mat-card-content>
     </mat-card>
   </div>
