--- a/targeting/src/app/matrizes/matrizes.component.html
+++ b/targeting/src/app/matrizes/matrizes.component.html
@@ -89,6 +89,7 @@
                                     </div>
                                 </div>
                                 <div class="test">
+                                    <button mat-raised-button color="primary" (click)="confirm3(matriz.id)">Actualizar</button>
                                     <button mat-icon-button color="primary" (click)="verMatriz(matriz)">
                                         <mat-icon>visibility</mat-icon>
                                     </button>
