--- a/targeting/src/styles.css
+++ b/targeting/src/styles.css
@@ -25,7 +25,8 @@
 @import "../node_modules/primeng/resources/primeng.min.css";
 
 
-body {
+html, body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: Verdana, Geneva, sans-serif;
