--- a/targeting/src/app/dialog-box/dialog-box.component.html
+++ b/targeting/src/app/dialog-box/dialog-box.component.html
@@ -1,5 +1,5 @@
 
-<div id="modal">
+<div id="modal" style="width:100%!important;position:relative!important;left:0 !important;  ">
     <h1 mat-dialog-title><strong>{{action}}</strong></h1>
     <div mat-dialog-content>
       <mat-form-field style="width:100%" *ngIf="action != 'Eliminar'; else elseTemplate">
