--- a/targeting/src/app/matriz/matriz.component.css
+++ b/targeting/src/app/matriz/matriz.component.css
@@ -109,6 +109,8 @@ h2{
 .table-wrapper{
   margin: 10px 2px 2px;
   box-shadow: 0px 5px 5px rgba( 0, 0, 0, 0.2 );
+  align-content: right;
+  overflow-x:auto;
 }
 
 .fl-table {
@@ -175,6 +177,7 @@ h2{
       width: 100%;
   }
   .table-wrapper:before{
+      overflow-x:auto;
       content: "Scroll horizontally >";
       display: block;
       text-align: right;
@@ -182,53 +185,5 @@ h2{
       color: white;
       padding: 0 0 10px;
   }
-  .fl-table thead, .fl-table tbody, .fl-table thead th {
-      display: block;
-  }
-  .fl-table thead th:last-child{
-      border-bottom: none;
-  }
-  .fl-table thead {
-      float: left;
-  }
-  .fl-table tbody {
-      width: auto;
-      position: relative;
-      overflow-x: auto;
-  }
-  .fl-table td, .fl-table th {
-      padding: 20px .625em .625em .625em;
-      height: 60px;
-      vertical-align: middle;
-      box-sizing: border-box;
-      overflow-x: hidden;
-      overflow-y: auto;
-      width: 120px;
-      font-size: 13px;
-      text-overflow: ellipsis;
-  }
-  .fl-table thead th {
-      text-align: left;
-      border-bottom: 1px solid #f7f7f9;
-  }
-  .fl-table tbody tr {
-      display: table-cell;
-  }
-  .fl-table tbody tr:nth-child(odd) {
-      background: none;
-  }
-  .fl-table tr:nth-child(even) {
-      background: transparent;
-  }
-  .fl-table tr td:nth-child(odd) {
-      background: #F8F8F8;
-      border-right: 1px solid #E6E4E4;
-  }
-  .fl-table tr td:nth-child(even) {
-      border-right: 1px solid #E6E4E4;
-  }
-  .fl-table tbody td {
-      display: block;
-      text-align: center;
-  }
+
 }
