--- a/targeting/src/app/matrizes/matrizes.component.css
+++ b/targeting/src/app/matrizes/matrizes.component.css
@@ -1,3 +1,37 @@
+
+* {
+    box-sizing: border-box;
+  }
+  
+  .flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 30px;
+    text-align: center;
+  }
+  
+  .flex-item-left {
+    background-color: #f1f1f1;
+    padding: 10px;
+    flex: 50%;
+  }
+  
+  .flex-item-right {
+    background-color:  #f1f1f1;
+    padding: 10px;
+    flex: 50%;
+  }
+  
+  /* Responsive layout - makes a one column-layout instead of a two-column layout */
+  @media (max-width: 800px) {
+    .flex-item-right, .flex-item-left {
+      flex: 100%;
+    }
+    .main {
+        visibility: hidden;
+   }
+  }
+
 .car-details{
     border: 1px solid #b3c2ca;
             border-radius: 3px;
