--- a/targeting/src/app/home/home.component.html
+++ b/targeting/src/app/home/home.component.html
@@ -10,13 +10,14 @@
   <div style="text-align: center;">
     <h1>Menu Principal</h1>
   </div>
-  
-  <div style="display: flex;
-  justify-content: space-around; align-items: center;">
-
-      <button mdbBtn type="button" color="elegant" (click)="Actores();" mdbWavesEffect>Actores</button>
-      <button mdbBtn type="button" color="elegant" (click)="Temas();" mdbWavesEffect>Temas</button>
-      <button mdbBtn type="button" color="elegant" (click)="Matriz();" mdbWavesEffect>Matrices</button>
+    <div class="container">
+      <div class="container-fluid full-width">
+          <div class="row-fluid">
+            <button mdbBtn type="button" color="elegant" (click)="Actores();" mdbWavesEffect>Actores</button>
+            <button mdbBtn type="button" color="elegant" (click)="Temas();" mdbWavesEffect>Temas</button>
+            <button mdbBtn type="button" color="elegant" (click)="Matriz();" mdbWavesEffect>Matrices</button>
+          </div>
+      </div>
   </div>
 </body>
 </html>
