--- a/targeting/src/app/navbar/navbar.component.html
+++ b/targeting/src/app/navbar/navbar.component.html
@@ -48,7 +48,7 @@
     <div fxFlex fxLayout fxLayoutAlign = "end" fxHide.xs>
       <ul fxLayout fxLayoutGap ="15px" class="navigation-items">
         <li>
-          <a mat-button routerLink="">Incio</a>
+          <a mat-button routerLink="">Inicio</a>
         </li>
         <li>
           <a mat-button routerLink="actores">Actores</a>
